--- a/nav-resp.css
+++ b/nav-resp.css
@@ -98,9 +98,15 @@
   }
 }
 
-@media (min-width: 600px) and (max-width: 815px) {
+@media (min-width: 693px) and (max-width: 815px) {
   .sh-menu-blocks {
     left: 319px;
+  }
+}
+
+@media (max-width: 692px) {
+  .sh-menu-blocks {
+    left: 245px;
   }
 }
 
