--- a/nav-resp.scss
+++ b/nav-resp.scss
@@ -1,12 +1,12 @@
 .sh-menu {
-    align-items    : center;
-    display        : none;
-    flex-direction : column;
+    align-items: center;
+    display: none;
+    flex-direction: column;
     justify-content: center;
-    margin         : 0;
-    overflow       : hidden;
-    position       : absolute;
-    width          : 100%;
+    margin: 0;
+    overflow: hidden;
+    position: absolute;
+    width: 100%;
     right: 2px;
     top: 47px;
     @media (min-width: 100px) and (max-width: 1190px) {
@@ -18,9 +18,9 @@
 }
 
 .sh-menu-blocks {
-    top     : 150px;
+    top: 150px;
     position: absolute;
-    left    : 506px;
+    left: 506px;
     @media (min-width: 100px) and (max-width: 1190px) {
         display: none;
     }
@@ -28,40 +28,41 @@
         display: none;
     }
     @media (max-width: 1140px) {
-        left:480px;
+        left: 480px;
     }
     @media (min-width: 1040px) and (max-width: 1091px) {
-        left:446px;
+        left: 446px;
     }
     @media (min-width: 1040px) and (max-width: 1084px) {
-        left:446px;
+        left: 446px;
     }
     @media (max-width: 1039px) {
-        left:423px;
+        left: 423px;
     }
     @media (min-width: 962px) and (max-width: 1000px) {
-        left:402px;
+        left: 402px;
     }
     @media (min-width: 912px) and (max-width: 961px) {
-        left:350px;
+        left: 350px;
     }
     @media (min-width: 850px) and (max-width: 911px) {
-        left:350px;
+        left: 350px;
     }
     @media (min-width: 600px) and (max-width: 849px) {
-        left:340px;
+        left: 340px;
     }
-    @media (min-width: 600px) and (max-width: 815px) {
-        left:319px;
+    @media (min-width: 693px) and (max-width: 815px) {
+        left: 319px;
     }
-
+    @media (max-width: 692px) {
+        left: 245px;
+    }
     .item {
-        font-size  : 35px;
+        font-size: 35px;
         font-family: Roboto;
-        cursor     : pointer;
+        cursor: pointer;
         color: #ffffff;
     }
-
     .i-1,
     .i-2,
     .i-3,
@@ -70,61 +71,57 @@
     .i-6,
     .i-7,
     .i-8 {
-        -webkit-animation-name     : slideInLeft;
-        animation-name             : slideInLeft;
-        -webkit-animation-duration : 1s;
-        animation-duration         : 1s;
+        -webkit-animation-name: slideInLeft;
+        animation-name: slideInLeft;
+        -webkit-animation-duration: 1s;
+        animation-duration: 1s;
         -webkit-animation-fill-mode: both;
-        animation-fill-mode        : both;
+        animation-fill-mode: both;
     }
-
     @-webkit-keyframes slideInLeft {
         0% {
             -webkit-transform: translateX(-100%);
-            transform        : translateX(-100%);
-            visibility       : visible;
+            transform: translateX(-100%);
+            visibility: visible;
         }
-
         100% {
             -webkit-transform: translateX(0);
-            transform        : translateX(0);
+            transform: translateX(0);
         }
     }
-
     @keyframes slideInLeft {
         0% {
             -webkit-transform: translateX(-100%);
-            transform        : translateX(-100%);
-            visibility       : visible;
+            transform: translateX(-100%);
+            visibility: visible;
         }
-
         100% {
             -webkit-transform: translateX(0);
-            transform        : translateX(0);
+            transform: translateX(0);
         }
     }
 }
 
 .layer {
-    display   : none;
+    display: none;
     background: rgba(102, 102, 102, 0.5);
-    width     : 100%;
-    height    : 100%;
-    position  : absolute;
-    top       : 0;
-    left      : 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .ham {
-    cursor                     : pointer;
+    cursor: pointer;
     -webkit-tap-highlight-color: transparent;
-    transition                 : transform 400ms;
-    -moz-user-select           : none;
-    -webkit-user-select        : none;
-    -ms-user-select            : none;
-    user-select                : none;
-    position                   : relative;
-    z-index                    : 1;
+    transition: transform 400ms;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    position: relative;
+    z-index: 1;
 }
 
 .hamRotate.active {
@@ -136,10 +133,10 @@
 }
 
 .line {
-    fill          : none;
-    transition    : stroke-dasharray 400ms, stroke-dashoffset 400ms;
-    stroke        : #ffffff;
-    stroke-width  : 5.5;
+    fill: none;
+    transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+    stroke: #ffffff;
+    stroke-width: 5.5;
     stroke-linecap: round;
 }
 
@@ -156,7 +153,7 @@
 }
 
 .ham3.active .top {
-    stroke-dasharray : 75 130;
+    stroke-dasharray: 75 130;
     stroke-dashoffset: -63px;
 }
 
@@ -165,6 +162,6 @@
 }
 
 .ham3.active .bottom {
-    stroke-dasharray : 110 205;
+    stroke-dasharray: 110 205;
     stroke-dashoffset: -86px;
 }
