--- a/nav-resp.scss
+++ b/nav-resp.scss
@@ -57,6 +57,15 @@
     @media (max-width: 692px) {
         left: 245px;
     }
+    @media (max-width: 425px) {
+        left: 115px;
+    }
+    @media (max-width: 370px) {
+        left: 90px;
+    }
+    @media (max-width: 369px) {
+        left: 65px;
+    }
     .item {
         font-size: 35px;
         font-family: Roboto;
